--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,17 @@
 @import "tailwindcss";
 
-body{
+/* body{
     background-color: black;
+} */
+
+@layer utilities{
+    .animate-marquee{
+        animation: marquee 20s linear infinite;
+    }
+}
+
+@keyframes marquee {
+    0%{transform: translateX(0%);}
+    50%{transform: translateX(-50%);}
+    100%{transform: translateX(-100%);}
 }
